update db version

--- a/messages/be/LC_MESSAGES/3166-2.po
+++ b/messages/be/LC_MESSAGES/3166-2.po
@@ -5,14 +5,14 @@
 # This file is distributed under the same license as the iso-codes package.
 # .
 # Copyright ©
-# Viktar Vauchkevich <victorenator@gmail.com>, 2018.
+# Viktar Vauchkevich <victorenator@gmail.com>, 2018, 2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_3166-2\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2019-03-23 22:08+0100\n"
-"PO-Revision-Date: 2018-10-22 23:23+0000\n"
+"PO-Revision-Date: 2019-04-03 21:04+0000\n"
 "Last-Translator: Viktar Vauchkevich <victorenator@gmail.com>\n"
 "Language-Team: Belarusian <https://hosted.weblate.org/projects/iso-codes/"
 "iso-3166-2/be/>\n"
@@ -20,9 +20,9 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 3.3-dev\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<="
+"4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"X-Generator: Weblate 3.6-dev\n"
 
 #. Name for AD-02
 msgid "Canillo"
@@ -2769,10 +2769,8 @@ msgid "South-West"
 msgstr "Паўднёвы Захад"
 
 #. Name for CN-AH
-#, fuzzy
-#| msgid "Anhui"
 msgid "Anhui Sheng"
-msgstr "Аньхой"
+msgstr "Правінцыя Аньхой"
 
 #. Name for CN-BJ
 #, fuzzy
@@ -2787,128 +2785,94 @@ msgid "Chongqing Shi"
 msgstr "Чунцын"
 
 #. Name for CN-FJ
-#, fuzzy
-#| msgid "Fujian"
 msgid "Fujian Sheng"
-msgstr "Фуцзянь"
+msgstr "Правінцыя Фуцзянь"
 
 #. Name for CN-GD
-#, fuzzy
-#| msgid "Guangdong"
 msgid "Guangdong Sheng"
-msgstr "Гуандун"
+msgstr "Правінцыя Гуандун"
 
 #. Name for CN-GS
-#, fuzzy
-#| msgid "Gansu"
 msgid "Gansu Sheng"
-msgstr "Ганьсу"
+msgstr "Правінцыя Ганьсу"
 
 #. Name for CN-GX
 msgid "Guangxi Zhuangzu Zizhiqu"
-msgstr ""
+msgstr "Гуансі-Чжуанскі аўтаномны раён"
 
 #. Name for CN-GZ
-#, fuzzy
-#| msgid "Guizhou"
 msgid "Guizhou Sheng"
-msgstr "Гуйчжоу"
+msgstr "Правінцыя Гуйчжоу"
 
 #. Name for CN-HA
-#, fuzzy
-#| msgid "Henan"
 msgid "Henan Sheng"
-msgstr "Хэнань"
+msgstr "Правінцыя Хэнань"
 
 #. Name for CN-HB
-#, fuzzy
-#| msgid "Hubei"
 msgid "Hubei Sheng"
-msgstr "Хубэй"
+msgstr "Правінцыя Хубэй"
 
 #. Name for CN-HE
-#, fuzzy
-#| msgid "Hebei"
 msgid "Hebei Sheng"
-msgstr "Хэбэй"
+msgstr "Правінцыя Хэбэй"
 
 #. Name for CN-HI
-#, fuzzy
-#| msgid "Hainan"
 msgid "Hainan Sheng"
-msgstr "Хайнань"
+msgstr "Правінцыя Хайнань"
 
 #. Name for CN-HK
 msgid "Hong Kong SAR (see also separate country code entry under HK)"
 msgstr ""
+"Спецыяльны адміністрацыйны раён Ганконг (глядзі таксама асобны код краіны HK)"
 
 #. Name for CN-HL
-#, fuzzy
-#| msgid "Heilongjiang"
 msgid "Heilongjiang Sheng"
-msgstr "Хэйлунцзян"
+msgstr "Правінцыя Хэйлунцзян"
 
 #. Name for CN-HN
-#, fuzzy
-#| msgid "Hunan"
 msgid "Hunan Sheng"
-msgstr "Хунань"
+msgstr "Правінцыя Хунань"
 
 #. Name for CN-JL
-#, fuzzy
-#| msgid "Jilin"
 msgid "Jilin Sheng"
-msgstr "Гірын"
+msgstr "Правінцыя Гірын"
 
 #. Name for CN-JS
-#, fuzzy
-#| msgid "Jiangsu"
 msgid "Jiangsu Sheng"
-msgstr "Цзянсу"
+msgstr "Правінцыя Цзянсу"
 
 #. Name for CN-JX
-#, fuzzy
-#| msgid "Jiangxi"
 msgid "Jiangxi Sheng"
-msgstr "Цзянсі"
+msgstr "Правінцыя Цзянсі"
 
 #. Name for CN-LN
-#, fuzzy
-#| msgid "Liaoning"
 msgid "Liaoning Sheng"
-msgstr "Ляанін"
+msgstr "Правінцыя Ляанін"
 
 #. Name for CN-MO
 msgid "Macao SAR (see also separate country code entry under MO)"
 msgstr ""
+"Спецыяльны адміністрацыйны раён Макаа (глядзі таксама асобны код краіны MO)"
 
 #. Name for CN-NM
-#, fuzzy
-#| msgid "Nei Mongol"
 msgid "Nei Mongol Zizhiqu"
-msgstr "Унутраная Манголія"
+msgstr "Аўтаномны раён Унутраная Манголія"
 
 #. Name for CN-NX
 msgid "Ningxia Huizi Zizhiqu"
-msgstr ""
+msgstr "Нінся-Хуэйскі аўтаномны раён"
 
 #. Name for CN-QH
-#, fuzzy
-#| msgid "Qinghai"
 msgid "Qinghai Sheng"
-msgstr "Цынхай"
+msgstr "Правінцыя Цынхай"
 
 #. Name for CN-SC
-#, fuzzy
-#| msgid "Sichuan"
 msgid "Sichuan Sheng"
-msgstr "Сычуань"
+msgstr "Правінцыя Сычуань"
 
 #. Name for CN-SD
-#, fuzzy
-#| msgid "Shandong"
 msgid "Shandong Sheng"
-msgstr "Шаньдун"
+msgstr "Правінцыя Шаньдун"
 
 #. Name for CN-SH
 #, fuzzy
@@ -2917,48 +2881,36 @@ msgid "Shanghai Shi"
 msgstr "Шанхай"
 
 #. Name for CN-SN
-#, fuzzy
-#| msgid "Shaanxi"
 msgid "Shaanxi Sheng"
-msgstr "Шэньсі"
+msgstr "Правінцыя Шэньсі"
 
 #. Name for CN-SX
-#, fuzzy
-#| msgid "Shanxi"
 msgid "Shanxi Sheng"
-msgstr "Шаньсі"
+msgstr "Правінцыя Шаньсі"
 
 #. Name for CN-TJ
-#, fuzzy
-#| msgid "Tianjin"
 msgid "Tianjin Shi"
 msgstr "Цяньцзінь"
 
 #. Name for CN-TW
 msgid "Taiwan Sheng (see also separate country code entry under TW)"
-msgstr ""
+msgstr "Правінцыя Тайвань (глядзі таксама асобны код краіны TW)"
 
 #. Name for CN-XJ
 msgid "Xinjiang Uygur Zizhiqu"
-msgstr ""
+msgstr "Сіньцзян-Уйгурскі аўтаномны раён"
 
 #. Name for CN-XZ
-#, fuzzy
-#| msgid "Xizang"
 msgid "Xizang Zizhiqu"
-msgstr "Тыбет"
+msgstr "Тыбецкі аўтаномны раён"
 
 #. Name for CN-YN
-#, fuzzy
-#| msgid "Yunnan"
 msgid "Yunnan Sheng"
-msgstr "Юньнань"
+msgstr "Правінцыя Юньнань"
 
 #. Name for CN-ZJ
-#, fuzzy
-#| msgid "Zhejiang"
 msgid "Zhejiang Sheng"
-msgstr "Чжэцзян"
+msgstr "Правінцыя Чжэцзян"
 
 #. Name for CO-ANT
 msgid "Antioquia"
