--- a/messages/es/LC_MESSAGES/3166-1.po
+++ b/messages/es/LC_MESSAGES/3166-1.po
@@ -9,14 +9,15 @@
 # Juan Manuel García Molina <juanmagm@mail.com>, 2001.
 # Javier Fernández-Sanguino <jfs@debian.org>, 2004-2008, 2010.
 # zamir <hades_ni@yahoo.com>, 2013.
+# Rodrigo Lledó <rodhos92@gmail.com>, 2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_3166-1\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2019-03-20 13:20+0100\n"
-"PO-Revision-Date: 2018-05-03 13:41+0000\n"
-"Last-Translator: Chris Leonard <cjlhomeaddress@gmail.com>\n"
+"PO-Revision-Date: 2019-04-07 21:04+0000\n"
+"Last-Translator: Rodrigo Lledó <rodhos92@gmail.com>\n"
 "Language-Team: Spanish <https://hosted.weblate.org/projects/iso-codes/"
 "iso-3166-1/es/>\n"
 "Language: es\n"
@@ -24,7 +25,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Weblate 3.0-dev\n"
+"X-Generator: Weblate 3.6-dev\n"
 
 #. Name for ABW
 msgid "Aruba"
@@ -591,10 +592,8 @@ msgid "Gambia"
 msgstr "Gambia"
 
 #. Official name for GMB
-#, fuzzy
-#| msgid "Republic of Zambia"
 msgid "Republic of the Gambia"
-msgstr "República de Zambia"
+msgstr "República de Gambia"
 
 #. Name for GNB
 msgid "Guinea-Bissau"
@@ -985,16 +984,12 @@ msgid "Republic of the Marshall Islands"
 msgstr "República de las Islas Marshall"
 
 #. Name for MKD
-#, fuzzy
-#| msgid "New Caledonia"
 msgid "North Macedonia"
-msgstr "Nueva Caledonia"
+msgstr "Macedonia del Norte"
 
 #. Official name for MKD
-#, fuzzy
-#| msgid "Republic of Lithuania"
 msgid "Republic of North Macedonia"
-msgstr "República de Lituania"
+msgstr "República de Macedonia del Norte"
 
 #. Name for MLI
 msgid "Mali"
@@ -1442,13 +1437,11 @@ msgstr "Reino de Suecia"
 
 #. Name for SWZ
 msgid "Eswatini"
-msgstr ""
+msgstr "Suazilandia"
 
 #. Official name for SWZ
-#, fuzzy
-#| msgid "Kingdom of Spain"
 msgid "Kingdom of Eswatini"
-msgstr "Reino de España"
+msgstr "Reino de Suazilandia"
 
 #. Name for SXM, Official name for SXM
 msgid "Sint Maarten (Dutch part)"
