--- a/messages/be/LC_MESSAGES/3166-1.po
+++ b/messages/be/LC_MESSAGES/3166-1.po
@@ -8,23 +8,24 @@
 # Alastair McKinstry <mckinstry@debian.org>, 2004.
 # Ihar Hrachyshka <ihar.hrachyshka@gmail.com>, 2007, 2010-2013.
 # Viktar Siarheichyk <vics@fsfe.org>, 2015.
+# Viktar Vauchkevich <victorenator@gmail.com>, 2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_3166-1\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2019-03-20 13:20+0100\n"
-"PO-Revision-Date: 2018-01-01 15:06+0000\n"
-"Last-Translator: Chris Leonard <cjlhomeaddress@gmail.com>\n"
+"PO-Revision-Date: 2019-04-03 21:04+0000\n"
+"Last-Translator: Viktar Vauchkevich <victorenator@gmail.com>\n"
 "Language-Team: Belarusian <https://hosted.weblate.org/projects/iso-codes/"
 "iso-3166-1/be/>\n"
 "Language: be\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 2.19-dev\n"
+"Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<="
+"4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
+"X-Generator: Weblate 3.6-dev\n"
 
 #. Name for ABW
 msgid "Aruba"
@@ -591,10 +592,8 @@ msgid "Gambia"
 msgstr "Гамбія"
 
 #. Official name for GMB
-#, fuzzy
-#| msgid "Republic of Zambia"
 msgid "Republic of the Gambia"
-msgstr "Рэспубліка Замбія"
+msgstr "Рэспубліка Гамбія"
 
 #. Name for GNB
 msgid "Guinea-Bissau"
@@ -985,16 +984,12 @@ msgid "Republic of the Marshall Islands"
 msgstr "Рэспубліка Маршалавы Астравы"
 
 #. Name for MKD
-#, fuzzy
-#| msgid "New Caledonia"
 msgid "North Macedonia"
-msgstr "Новая Каледонія"
+msgstr "Паўночная Македонія"
 
 #. Official name for MKD
-#, fuzzy
-#| msgid "Republic of Lithuania"
 msgid "Republic of North Macedonia"
-msgstr "Рэспубліка Літва"
+msgstr "Рэспубліка Паўночная Македонія"
 
 #. Name for MLI
 msgid "Mali"
@@ -1442,13 +1437,11 @@ msgstr "Каралеўства Швецыя"
 
 #. Name for SWZ
 msgid "Eswatini"
-msgstr ""
+msgstr "Эсваціні"
 
 #. Official name for SWZ
-#, fuzzy
-#| msgid "Kingdom of Spain"
 msgid "Kingdom of Eswatini"
-msgstr "Каралеўства Іспанія"
+msgstr "Каралеўства Эсваціні"
 
 #. Name for SXM, Official name for SXM
 msgid "Sint Maarten (Dutch part)"
