--- a/messages/es/LC_MESSAGES/4217.po
+++ b/messages/es/LC_MESSAGES/4217.po
@@ -9,19 +9,23 @@
 # Germán Poo Caamaño <gpoo@ubiobio.cl>, 2001.
 # Alastair McKinstry <mckinstry@debian.org>, 2002.
 # Javier Fernandez-Sanguino <jfs@debian.org>, 2004-2011.
+# Rodrigo Lledó <rodhos92@gmail.com>, 2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_4217\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2011-09-25 22:16+0200\n"
-"Last-Translator: Javier Fernandez-Sanguino <jfs@debian.org>\n"
-"Language-Team: Spanish <debian-l10n-spanish@lists.debian.org>\n"
+"PO-Revision-Date: 2019-04-07 21:04+0000\n"
+"Last-Translator: Rodrigo Lledó <rodhos92@gmail.com>\n"
+"Language-Team: Spanish <https://hosted.weblate.org/projects/iso-codes/"
+"iso-4217/es/>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 3.6-dev\n"
 
 #. Name for AED
 msgid "UAE Dirham"
@@ -40,10 +44,8 @@ msgid "Armenian Dram"
 msgstr "Dram armenio"
 
 #. Name for ANG
-#, fuzzy
-#| msgid "Netherlands Antillian Guilder"
 msgid "Netherlands Antillean Guilder"
-msgstr "Florín de las Antillas Neerlandesas"
+msgstr "Florín antillano neerlandés"
 
 #. Name for AOA
 msgid "Kwanza"
@@ -58,20 +60,16 @@ msgid "Australian Dollar"
 msgstr "Dólar australiano"
 
 #. Name for AWG
-#, fuzzy
-#| msgid "Aruban Guilder"
 msgid "Aruban Florin"
-msgstr "Florín de Aruba"
+msgstr "Florín arubeño"
 
 #. Name for AZN
 msgid "Azerbaijanian Manat"
 msgstr "Manat de Azerbayán"
 
 #. Name for BAM
-#, fuzzy
-#| msgid "Convertible Marks"
 msgid "Convertible Mark"
-msgstr "Marcos convertibles"
+msgstr "Marco convertible"
 
 #. Name for BBD
 msgid "Barbados Dollar"
@@ -122,10 +120,8 @@ msgid "Pula"
 msgstr "Pula"
 
 #. Name for BYN
-#, fuzzy
-#| msgid "Belarussian Ruble"
 msgid "Belarusian Ruble"
-msgstr "Rubla bielorrusa"
+msgstr "Rublo bielorruso"
 
 #. Name for BZD
 msgid "Belize Dollar"
@@ -160,20 +156,16 @@ msgid "Costa Rican Colon"
 msgstr "Colón costarricense"
 
 #. Name for CUC
-#, fuzzy
-#| msgid "Convertible Marks"
 msgid "Peso Convertible"
-msgstr "Marcos convertibles"
+msgstr "Peso convertible"
 
 #. Name for CUP
 msgid "Cuban Peso"
 msgstr "Peso cubano"
 
 #. Name for CVE
-#, fuzzy
-#| msgid "Cape Verde Escudo"
 msgid "Cabo Verde Escudo"
-msgstr "Escudo de Cabo Verde"
+msgstr "Escudo caboverdiano"
 
 #. Name for CZK
 msgid "Czech Koruna"
@@ -261,7 +253,7 @@ msgstr "Lempira hondureño"
 
 #. Name for HRK
 msgid "Kuna"
-msgstr ""
+msgstr "Kuna"
 
 #. Name for HTG
 msgid "Gourde"
@@ -408,10 +400,8 @@ msgid "Rufiyaa"
 msgstr "Rufiyaa"
 
 #. Name for MWK
-#, fuzzy
-#| msgid "Zambian Kwacha"
 msgid "Malawi Kwacha"
-msgstr "Kwacha zambiano"
+msgstr "Kwacha malauí"
 
 #. Name for MXN
 msgid "Mexican Peso"
@@ -423,7 +413,7 @@ msgstr "Ringgit malasio"
 
 #. Name for MZN
 msgid "Mozambique Metical"
-msgstr ""
+msgstr "Metical mozambiqueño"
 
 #. Name for NAD
 msgid "Namibia Dollar"
@@ -458,10 +448,8 @@ msgid "Balboa"
 msgstr "Balboa"
 
 #. Name for PEN
-#, fuzzy
-#| msgid "Som"
 msgid "Sol"
-msgstr "Som"
+msgstr "Sol"
 
 #. Name for PGK
 msgid "Kina"
@@ -489,7 +477,7 @@ msgstr "Rial de Qatar"
 
 #. Name for RON
 msgid "Romanian Leu"
-msgstr ""
+msgstr "Leu rumano"
 
 #. Name for RSD
 msgid "Serbian Dinar"
@@ -546,10 +534,8 @@ msgid "Surinam Dollar"
 msgstr "Dólar surinamés"
 
 #. Name for SSP
-#, fuzzy
-#| msgid "Sudanese Pound"
 msgid "South Sudanese Pound"
-msgstr "Libra sudanesa"
+msgstr "Libra sursudanesa"
 
 #. Name for STD
 msgid "Dobra"
@@ -577,23 +563,19 @@ msgstr "Somoni"
 
 #. Name for TMT
 msgid "Turkmenistan New Manat"
-msgstr ""
+msgstr "Manat turcomano"
 
 #. Name for TND
 msgid "Tunisian Dinar"
 msgstr "Dinar tunecino"
 
 #. Name for TOP
-#, fuzzy
-#| msgid "Pa'anga"
 msgid "Pa’anga"
-msgstr "Pa'anga"
+msgstr "Paʻanga"
 
 #. Name for TRY
-#, fuzzy
-#| msgid "New Turkish Lira"
 msgid "Turkish Lira"
-msgstr "Nueva lira turca"
+msgstr "Lira turca"
 
 #. Name for TTD
 msgid "Trinidad and Tobago Dollar"
@@ -629,7 +611,7 @@ msgstr "Som uzbeco"
 
 #. Name for VEF
 msgid "Bolívar"
-msgstr ""
+msgstr "Bolívar"
 
 #. Name for VND
 msgid "Dong"
@@ -656,38 +638,28 @@ msgid "Gold"
 msgstr "Oro"
 
 #. Name for XBA
-#, fuzzy
-#| msgid "European Composite Unit (EURCO)"
 msgid "Bond Markets Unit European Composite Unit (EURCO)"
-msgstr "Unidad Compuesta Europea (EURCO)"
+msgstr "Unidad de Mercados de Bonos Unidad Europea Compuesta (EURCO)"
 
 #. Name for XBB
-#, fuzzy
-#| msgid "European Monetary Unit (E.M.U.-6)"
 msgid "Bond Markets Unit European Monetary Unit (E.M.U.-6)"
-msgstr "Unidad Monetaria Europea (E.U.M.-6)"
+msgstr "Unidad de Mercados de Bonos Unidad Monetaria Europea (E.U.M.-6)"
 
 #. Name for XBC
-#, fuzzy
-#| msgid "European Unit of Account 9 (E.U.A.-9)"
 msgid "Bond Markets Unit European Unit of Account 9 (E.U.A.-9)"
-msgstr "Unidad de cuenta europea 9 (E.U.A.-9)"
+msgstr "Unidad de Mercados de Bonos Unidad de cuenta europea 9 (E.U.A.-9)"
 
 #. Name for XBD
-#, fuzzy
-#| msgid "European Unit of Account 17 (E.U.A.-17)"
 msgid "Bond Markets Unit European Unit of Account 17 (E.U.A.-17)"
-msgstr "Unidad de cuenta europea 17 (E.U.A.-17)"
+msgstr "Unidad de Mercados de Bonos Unidad de cuenta europea 17 (E.U.A.-17)"
 
 #. Name for XCD
 msgid "East Caribbean Dollar"
 msgstr "Dólar del Caribe oriental"
 
 #. Name for XDR
-#, fuzzy
-#| msgid "Special Drawing Rights"
 msgid "SDR (Special Drawing Right)"
-msgstr "Derechos especiales de giro"
+msgstr "DEG (Derecho especial de giro)"
 
 #. Name for XOF
 msgid "CFA Franc BCEAO"
@@ -707,21 +679,20 @@ msgstr "Platino"
 
 #. Name for XSU
 msgid "Sucre"
-msgstr ""
+msgstr "SUCRE"
 
 #. Name for XTS
-#, fuzzy
-#| msgid "Code for testing purposes"
 msgid "Codes specifically reserved for testing purposes"
-msgstr "Código reservado para pruebas"
+msgstr "Códigos reservados específicamente para pruebas"
 
 #. Name for XUA
 msgid "ADB Unit of Account"
-msgstr ""
+msgstr "Unidad de cuenta del ADB"
 
 #. Name for XXX
 msgid "The codes assigned for transactions where no currency is involved"
 msgstr ""
+"Los códigos asignados para transacciones donde no hay moneda involucrada"
 
 #. Name for YER
 msgid "Yemeni Rial"
