--- a/messages/pt/LC_MESSAGES/639-2.po
+++ b/messages/pt/LC_MESSAGES/639-2.po
@@ -8,19 +8,23 @@
 # Alastair McKinstry <mckinstry@debian.org>, 2001.
 # Filipe Maia <fmaia@gmx.net>, 2001.
 # Miguel Figueiredo <elmig@debianpt.org>, 2013.
+# Rui Mendes <xz9@protonmail.com>, 2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_639-2\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2013-06-08 08:54+0100\n"
-"Last-Translator: Miguel Figueiredo <elmig@debianpt.org>\n"
-"Language-Team: Portuguese <pt@li.org>\n"
+"PO-Revision-Date: 2019-04-05 15:04+0000\n"
+"Last-Translator: Rui Mendes <xz9@protonmail.com>\n"
+"Language-Team: Portuguese <https://hosted.weblate.org/projects/iso-codes/"
+"iso-639-2/pt/>\n"
 "Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n > 1;\n"
+"X-Generator: Weblate 3.6-dev\n"
 
 #. Name for aar
 msgid "Afar"
@@ -805,7 +809,7 @@ msgstr "Parar"
 
 #. Name for hye
 msgid "Armenian"
-msgstr "armênio"
+msgstr "arménio"
 
 #. Name for iba
 msgid "Iban"
