--- a/messages/pt_BR/LC_MESSAGES/15924.po
+++ b/messages/pt_BR/LC_MESSAGES/15924.po
@@ -7,22 +7,23 @@
 # Dr. Tobias Quathamer <toddy@debian.org>, 2007.
 # Luiz Fernando Ranghetti <elchevive@opensuse.org>, 2018.
 # Rafael Fontenelle <rafaelff@gnome.org>, 2018.
+# Rui Mendes <xz9@protonmail.com>, 2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: iso_15924\n"
 "Report-Msgid-Bugs-To: https://salsa.debian.org/iso-codes-team/iso-codes/"
 "issues\n"
 "POT-Creation-Date: 2018-01-17 22:10+0100\n"
-"PO-Revision-Date: 2018-04-08 19:21+0000\n"
-"Last-Translator: Rafael Fontenelle <rafaelff@gnome.org>\n"
-"Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/iso-"
-"codes/iso-15924/pt_BR/>\n"
+"PO-Revision-Date: 2019-04-05 15:04+0000\n"
+"Last-Translator: Rui Mendes <xz9@protonmail.com>\n"
+"Language-Team: Portuguese (Brazil) <https://hosted.weblate.org/projects/"
+"iso-codes/iso-15924/pt_BR/>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 2.20\n"
+"X-Generator: Weblate 3.6-dev\n"
 
 #. Name for Adlm
 msgid "Adlam"
@@ -34,7 +35,7 @@ msgstr "Afaka"
 
 #. Name for Aghb
 msgid "Caucasian Albanian"
-msgstr "Albaniano caucasiano"
+msgstr "Cáucaso-albanês"
 
 #. Name for Ahom
 msgid "Ahom, Tai Ahom"
@@ -94,7 +95,7 @@ msgstr "bopomofo"
 
 #. Name for Brah
 msgid "Brahmi"
-msgstr "brahmi"
+msgstr "brami"
 
 #. Name for Brai
 msgid "Braille"
